some minor modifications

--- a/recipes/VoxCeleb/SpeakerRec/hparams/verification_plda_xvector.yaml
+++ b/recipes/VoxCeleb/SpeakerRec/hparams/verification_plda_xvector.yaml
@@ -7,8 +7,8 @@ seed: 1234
 __set_seed: !apply:torch.manual_seed [!ref <seed>]
 
 # Folders and train_log file
-data_folder: /localscratch/voxceleb1_2  # use vox 1, vox2, or vox1+vox2 datasets
-output_folder: results/voxceleb1/speaker_verification_plda_xvectors
+data_folder: /raid/misc/voxceleb2  # use vox 1, vox2, or vox1+vox2 datasets
+output_folder: results/tvect_augment/2020/verifi_out
 save_folder: !ref <output_folder>/save/
 device: 'cuda:0'
 
@@ -24,7 +24,8 @@ verification_file: https://www.robots.ox.ac.uk/~vgg/data/voxceleb/meta/veri_test
 # is downloaded from the speechbrain HuggingFace repository.
 # However, a local path pointing to a directory containing your checkpoints may also be specified
 # instead (see pretrainer below)
-pretrain_path: speechbrain/spkrec-xvect-voxceleb
+# pretrain_path: speechbrain/spkrec-xvect-voxceleb
+pretrain_path: results/tvect_augment/2020/save/CKPT+2022-03-25+12-45-31+00
 
 # csv files
 train_data: !ref <save_folder>/train.csv
@@ -78,7 +79,7 @@ pretrainer: !new:speechbrain.utils.parameter_transfer.Pretrainer
     collect_in: !ref <save_folder>
     loadables:
         embedding_model: !ref <embedding_model>
-        mean_var_norm_emb: !ref <mean_var_norm_emb>
+        # mean_var_norm_emb: !ref <mean_var_norm_emb>
     paths:
         embedding_model: !ref <pretrain_path>/embedding_model.ckpt
-        mean_var_norm_emb: !ref <pretrain_path>/mean_var_norm_emb.ckpt
+        # mean_var_norm_emb: !ref <pretrain_path>/mean_var_norm_emb.ckpt
